<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_times_helper"
        android:textAppearance="?attr/textAppearanceCaption"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outbound_time_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/outbound_time"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconContentDescription="@string/clear">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/outbound_time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/return_time_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/return_time"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconContentDescription="@string/clear">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/return_time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>