<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_station_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/route_options"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconContentDescription="@string/clear">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/dialog_station_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete|textCapWords"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_use_nearest_in_dialog"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nearest_button_default"
        app:icon="@drawable/ic_my_location" />

</LinearLayout>